Fixed spacing on blog page

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -478,43 +478,43 @@ nav {
  display:table;
  margin-top: 150px;
  width:100%;
- height:100%
+ height:100%;
 }
 .hero-inner {
  width:100%;
  display:table-cell;
  vertical-align:middle;
- text-align:center
+ text-align:center;
 }
 .hero-inner .dot {
  padding:5px;
- border:1px solid #dedede
+ border:1px solid #dedede;
 }
 .hero-inner h1,.hero-inner h3 {
  max-width:760px;
- display:block
+ display:block;
 }
 .hero-inner h1 {
  margin-top:.7em;
  font-size:2.5rem;
- margin:0 auto
+ margin:0 auto;
 }
 .hero-inner h3 {
  font-size:1.25rem;
- margin:.8em auto 1.2em
+ margin:.8em auto 1.2em;
 }
 .hero-inner h3,.hero-inner em {
- font-weight:300
+ font-weight:300;
 }
 .hero-inner em {
- color:#337ab7
+ color:#337ab7;
 }
 .hero-inner strong {
- font-weight:700
+ font-weight:700;
 }
 .dot {
  max-height: 200px;
- border-radius:50%
+ border-radius:50%;
 }
 
 .hero-container {
@@ -522,16 +522,16 @@ nav {
  margin-left:auto;
  margin-right:auto;
  padding-left:1.5em;
- padding-right:1.5em
+ padding-right:1.5em;
 }
 @media screen and (min-width: 768px) {
  .hero-container {
-  max-width:768px
+  max-width:768px;
  }
 }
 @media screen and (min-width: 1240px) {
  .hero-container {
-  max-width:960px
+  max-width:960px;
  }
 }
 button,input[type="button"],input[type="reset"],input[type="submit"],.button,.toggle-navbar-button {
@@ -552,46 +552,77 @@ button,input[type="button"],input[type="reset"],input[type="submit"],.button,.to
  transition:background-color .3s ease-in-out;
  user-select:none;
  vertical-align:middle;
- white-space:nowrap
+ white-space:nowrap;
 }
 button:hover,input[type="button"]:hover,input[type="reset"]:hover,input[type="submit"]:hover,.button:hover,.toggle-navbar-button:hover,button:focus,input[type="button"]:focus,input[type="reset"]:focus,input[type="submit"]:focus,.button:focus,.toggle-navbar-button:focus {
- background-color:#296292
+ background-color:#296292;
 }
 button.disabled,input.disabled[type="button"],input.disabled[type="reset"],input.disabled[type="submit"],.disabled.button,.disabled.toggle-navbar-button,button:disabled,input[type="button"]:disabled,input[type="reset"]:disabled,input[type="submit"]:disabled,.button:disabled,.toggle-navbar-button:disabled {
  color:inherit;
  cursor:not-allowed;
  box-shadow:none;
- opacity:.65
+ opacity:.65;
 }
 button.disabled:hover,input.disabled[type="button"]:hover,input.disabled[type="reset"]:hover,input.disabled[type="submit"]:hover,.disabled.button:hover,.disabled.toggle-navbar-button:hover,button.disabled:focus,input.disabled[type="button"]:focus,input.disabled[type="reset"]:focus,input.disabled[type="submit"]:focus,.disabled.button:focus,.disabled.toggle-navbar-button:focus,button:disabled:hover,input[type="button"]:disabled:hover,input[type="reset"]:disabled:hover,input[type="submit"]:disabled:hover,.button:disabled:hover,.toggle-navbar-button:disabled:hover,button:disabled:focus,input[type="button"]:disabled:focus,input[type="reset"]:disabled:focus,input[type="submit"]:disabled:focus,.button:disabled:focus,.toggle-navbar-button:disabled:focus {
  color:inherit;
- background:none transparent
+ background:none transparent;
 }
 
 .button-ghost {
  background-color:transparent;
  border:2px solid #337ab7;
  color:#337ab7;
- margin-bottom:2px
+ margin-bottom:2px;
 }
 .button-ghost:hover,.button-ghost:focus {
- color:#fff
+ color:#fff;
 }
 
 
 .social {
- padding:1.5em 0
+ padding:1.5em 0;
 }
 .social li {
  display:inline-block;
- padding:0 .6em
+ padding:0 .6em;
 }
 .social a {
- color:#9a9a9a
+ color:#9a9a9a;
 }
 .social a:hover,.social a:active,.social a:focus {
- color:#337ab7
+ color:#337ab7;
 }
 .social i {
- font-size:1.6em
+ font-size:1.6em;
+}
+
+
+
+/* Blog list page each element*/
+.blog_ele {
+  display: block;
+  margin: 0 0 50px 0;
+}
+
+.blog_ele time {
+  float:right;
+  position: relative;
+  top: 2px;
+  margin: 0;
+  width: 35%;
+  float: right;
+  font-size: 1.1em;
+  color: #898989;
+  text-align: right;
+}
+
+.blog_ele h3 {
+  margin: 0;
+  width: 75%;
+  color: #4183C4;
+}
+@media screen and (min-width: 400px) {
+ .blog_ele {
+  margin: 20px 0;
+ }
 }
